--- a/blackjack.html
+++ b/blackjack.html
@@ -11,6 +11,8 @@
     
 
     <canvas id="myCanvas" ></canvas>
-    <button id="hitButton">Hit</button>
+    <button onclick="hit()"></button>
+    <button onclick="deal()"></button>
+    <button onclick="stand()"></button>
 </body>
 </html>
