--- a/blackjack.html
+++ b/blackjack.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blackjack</title>
     <link rel="stylesheet" href="blackjack.css">
     <script src="blackjack.js"></script>
 </head>
 <body>
-    
+    <h2>Dealer: <span id="dealer-sum"></span></h2>
+    <div id="dealer-cards">
+        <Img id="hidden" src="KIN's_Playing_Cards/Back_2.png"></Img>
+    </div>
 
-    <canvas id="myCanvas" ></canvas>
-    <button onclick="hit()"></button>
-    <button onclick="deal()"></button>
-    <button onclick="stand()"></button>
+    <h2>player: <span id="player-sum"></span></h2>
+    <div id="your-cards"></div>
+
+    <br>
+    <button id="hit">hit</button>
+<button id="stand">stand</button>
+<p id="results"></p>
+
 </body>
 </html>
