--- a/blackjack.html
+++ b/blackjack.html
@@ -14,7 +14,7 @@
     </div>
 
     <h2>player: <span id="player-sum"></span></h2>
-    <div id="your-cards"></div>
+    <div id="player-cards"></div>
 
     <br>
     <button id="hit">hit</button>
