--- a/blackjack.html
+++ b/blackjack.html
@@ -19,6 +19,8 @@
     <br>
     <button id="hit">hit</button>
 <button id="stand">stand</button>
+<button id="next-round" onclick="startgame()">Next round</button>
+<div id="cash">Cash: $1000</div>
 <p id="results"></p>
 
 </body>
